[package]
name = "froniousAPI"
version = "0.1.0"
authors = ["UnHold"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["blocking", "json"]}
strum_macros = { version = "0.26.1"}
time = { version = "0.3.32", features = ["serde", "serde-well-known"]}
serde_json = "1.0.113"
serde_repr = "0.1.18"
thiserror = "1.0.56"
influxdb2 = "0.5.0"
influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2"
chrono = "0.4.33"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
